# chi2sim

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: publish.yml  test.yml
.github/workflows/: build_wheels.yml
chi2sim/: __init__.py  chi2_cont_sim.pyx  chi_square_mc.pyx
chi2sim/src/: chi_square_mc.c  chi_square_mc.h
tests/: test_chi2sim.py
