[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "Cython>=0.29.21",
    "numpy>=1.15.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "chi2sim"
version = "0.1.0"
description = "Chi-square Monte Carlo simulation package"
readme = "README.md"
authors = [
    {name = "Joshua Marie Ongcoy", email = "joshstat126@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.15.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
